[package]
name = "stm32h750xbh-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
# 明确指定 Git 来源而非版本号，确保与 patch 一致
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = ["defmt", "stm32h750xb", "exti", "time-driver-tim2",  "memory-x", "unstable-pac", "chrono"]}
embassy-sync = { version = "0.6.2",  features = [] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
cfg-if = "1.0.0"

panic-probe = { version = "0.3.2", features = ["print-defmt"] }
# 明确指定 Git 来源
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-time-driver = "0.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }


[patch.crates-io]
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-stm32/defmt",
]

# 确保默认启用 stm32h750xb 特性
default = ["stm32h750xb", "defmt"]
stm32h750xb = ["embassy-stm32/stm32h750xb"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
